+ change url and fix scrollbar

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -97,8 +97,31 @@ $main-color: #FDBE31;
         transition: all 1s;
         border: 1px solid white;
         height: 80%;
-        width: 20%;
+        width: 400px;
         overflow: scroll;
+        overflow-x: hidden;
+        &::-webkit-scrollbar{    
+            width: 10px;
+            background-color: rgba(251, 251, 251, 0);
+        }
+        &::-webkit-scrollbar::hover{    
+            width: 20px;
+            background-color: rgba(251, 251, 251, 0.748);
+        }
+       
+        &::-webkit-scrollbar-track{
+            background-color: rgba(251, 251, 251, 0);
+        }
+        &::-webkit-scrollbar-track::hover{
+            background-color: black;
+        }
+        &::-webkit-scrollbar-thumb{
+            background: rgba(0, 0, 0, 0);  
+            height: 50px;
+        }
+        &::-webkit-scrollbar-thumb:hover {
+            background: rgba(0, 0, 0, 0); 
+        }
         .item{
             cursor: pointer;
             width: 100%;
@@ -115,7 +138,7 @@ $main-color: #FDBE31;
             background-color: $main-color;
             border: 1px solid $main-color;
             transform: translateY(-50%) scale(1.1);
-            left: 1%;
+            left: 20px;
         }
     }
 
